Add PATCH /device/{id} (requiresAdmin), to update device properties. Only "room" is supported
